Update numbers page to support syllabary

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -14,7 +14,8 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 We use numbers everywhere for common tasks such as giving directions,
 determining quantities, and navigating our day. In Hîsyêô even the concept of
 having multiple of something is considered apart of the same category of
-numbers. This category is called "determiners" and some determiners are
+numbers. This category is called
+[determiners](../language/word_types/determiners) and some determiners are
 quantities and others are concepts related to numbers.
 
 ## Cardinal Numbers
@@ -91,7 +92,7 @@ that you'll need to count all the way up to a trillion.
       <thead>
         <tr>
             <td><strong>Number</strong></td>
-            <td><strong kind="abugida">ɂ́ɟɀʇɽi</strong></td>
+            <td><strong>Abugida</strong></td>
         </tr>
       </thead>
       <tbody>
@@ -148,6 +149,71 @@ that you'll need to count all the way up to a trillion.
         <tr><td>1,000,000</td><td><HisyeoText kind='abugida'>elfû dûî</HisyeoText></td></tr>
         <tr><td>1,999</td><td><HisyeoText kind='abugida'>elfû kut,eson fîyên eson dus eson</HisyeoText></td></tr>
         <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>elfû dûî, dûî fîyên niswî dus nonkû elfû kut, tîû fîyên toû dus xêtî</HisyeoText></td></tr>
+      </tbody>
+    </table>
+  </TabItem>
+  <TabItem value="ostok-ûlonfû" label="aStK ulNfu" attributes={{className: 'hisyeo-tab-item-syllabary'}}>
+    <table>
+      <thead>
+        <tr>
+            <td><strong>Number</strong></td>
+            <td><strong>Syllabary</strong></td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>0</td><td><HisyeoText kind='syllabary'>xûnyu</HisyeoText></td></tr>
+        <tr><td>1</td><td><HisyeoText kind='syllabary'>kut</HisyeoText></td></tr>
+        <tr><td>2</td><td><HisyeoText kind='syllabary'>dûî</HisyeoText></td></tr>
+        <tr><td>3</td><td><HisyeoText kind='syllabary'>niswî</HisyeoText></td></tr>
+        <tr><td>4</td><td><HisyeoText kind='syllabary'>nonkû</HisyeoText></td></tr>
+        <tr><td>5</td><td><HisyeoText kind='syllabary'>tîû</HisyeoText></td></tr>
+        <tr><td>6</td><td><HisyeoText kind='syllabary'>toû</HisyeoText></td></tr>
+        <tr><td>7</td><td><HisyeoText kind='syllabary'>xêtî</HisyeoText></td></tr>
+        <tr><td>8</td><td><HisyeoText kind='syllabary'>tukwos</HisyeoText></td></tr>
+        <tr><td>9</td><td><HisyeoText kind='syllabary'>eson</HisyeoText></td></tr>
+        <tr><td>10</td><td><HisyeoText kind='syllabary'>dus</HisyeoText></td></tr>
+        <tr><td>11</td><td><HisyeoText kind='syllabary'>ônsu</HisyeoText></td></tr>
+        <tr><td>12</td><td><HisyeoText kind='syllabary'>bole</HisyeoText></td></tr>
+        <tr><td>13</td><td><HisyeoText kind='syllabary'>telô</HisyeoText></td></tr>
+        <tr><td>14</td><td><HisyeoText kind='syllabary'>ziyôn</HisyeoText></td></tr>
+        <tr><td>15</td><td><HisyeoText kind='syllabary'>kînsê</HisyeoText></td></tr>
+        <tr><td>16</td><td><HisyeoText kind='syllabary'>ses</HisyeoText></td></tr>
+        <tr><td>17</td><td><HisyeoText kind='syllabary'>dus xêtî</HisyeoText></td></tr>
+        <tr><td>18</td><td><HisyeoText kind='syllabary'>dus tukwos</HisyeoText></td></tr>
+        <tr><td>19</td><td><HisyeoText kind='syllabary'>dus eson</HisyeoText></td></tr>
+        <tr><td>20</td><td><HisyeoText kind='syllabary'>dûî dus</HisyeoText></td></tr>
+        <tr><td>21</td><td><HisyeoText kind='syllabary'>dûî dus kut</HisyeoText></td></tr>
+        <tr><td>22</td><td><HisyeoText kind='syllabary'>dûî dus dûî</HisyeoText></td></tr>
+        <tr><td>23</td><td><HisyeoText kind='syllabary'>dûî dus niswî</HisyeoText></td></tr>
+        <tr><td>24</td><td><HisyeoText kind='syllabary'>dûî dus nonkû</HisyeoText></td></tr>
+        <tr><td>25</td><td><HisyeoText kind='syllabary'>dûî dus tîû</HisyeoText></td></tr>
+        <tr><td>26</td><td><HisyeoText kind='syllabary'>dûî dus toû</HisyeoText></td></tr>
+        <tr><td>27</td><td><HisyeoText kind='syllabary'>dûî dus xêtî</HisyeoText></td></tr>
+        <tr><td>28</td><td><HisyeoText kind='syllabary'>dûî dus tukwos</HisyeoText></td></tr>
+        <tr><td>29</td><td><HisyeoText kind='syllabary'>dûî dus eson</HisyeoText></td></tr>
+        <tr><td>30</td><td><HisyeoText kind='syllabary'>niswî dus</HisyeoText></td></tr>
+        <tr><td>31</td><td><HisyeoText kind='syllabary'>niswî dus kut</HisyeoText></td></tr>
+        <tr><td>32</td><td><HisyeoText kind='syllabary'>niswî dus dûî</HisyeoText></td></tr>
+        <tr><td>33</td><td><HisyeoText kind='syllabary'>niswî dus niswî</HisyeoText></td></tr>
+        <tr><td>34</td><td><HisyeoText kind='syllabary'>niswî dus nonkû</HisyeoText></td></tr>
+        <tr><td>35</td><td><HisyeoText kind='syllabary'>niswî dus tîû</HisyeoText></td></tr>
+        <tr><td>36</td><td><HisyeoText kind='syllabary'>niswî dus toû</HisyeoText></td></tr>
+        <tr><td>37</td><td><HisyeoText kind='syllabary'>niswî dus xêtî</HisyeoText></td></tr>
+        <tr><td>38</td><td><HisyeoText kind='syllabary'>niswî dus tukwos</HisyeoText></td></tr>
+        <tr><td>39</td><td><HisyeoText kind='syllabary'>niswî dus eson</HisyeoText></td></tr>
+        <tr><td>40</td><td><HisyeoText kind='syllabary'>nonkû dus</HisyeoText></td></tr>
+        <tr><td>50</td><td><HisyeoText kind='syllabary'>tîû dus</HisyeoText></td></tr>
+        <tr><td>60</td><td><HisyeoText kind='syllabary'>toû dus</HisyeoText></td></tr>
+        <tr><td>70</td><td><HisyeoText kind='syllabary'>xêtî dus</HisyeoText></td></tr>
+        <tr><td>80</td><td><HisyeoText kind='syllabary'>tukwos dus</HisyeoText></td></tr>
+        <tr><td>90</td><td><HisyeoText kind='syllabary'>eson dus</HisyeoText></td></tr>
+        <tr><td>100</td><td><HisyeoText kind='syllabary'>fîyên</HisyeoText></td></tr>
+        <tr><td>101</td><td><HisyeoText kind='syllabary'>fîyên kut</HisyeoText></td></tr>
+        <tr><td>234</td><td><HisyeoText kind='syllabary'>dûî fîyên niswî dus nonkû</HisyeoText></td></tr>
+        <tr><td>1000</td><td><HisyeoText kind='syllabary'>elfû kut</HisyeoText></td></tr>
+        <tr><td>1,000,000</td><td><HisyeoText kind='syllabary'>elfû dûî</HisyeoText></td></tr>
+        <tr><td>1,999</td><td><HisyeoText kind='syllabary'>elfû kut,eson fîyên eson dus eson</HisyeoText></td></tr>
+        <tr><td>1,234,567</td><td><HisyeoText kind='syllabary'>elfû dûî, dûî fîyên niswî dus nonkû elfû kut, tîû fîyên toû dus xêtî</HisyeoText></td></tr>
       </tbody>
     </table>
   </TabItem>
@@ -208,20 +274,20 @@ If you supply a number on the right-hand side of any noun phrase (in the
 modifier position), it indicates which specific value in a list of values, also
 known as the *placement*. These are called **Ordinal Numbers**.
 
-| English    | Hîsyêô     | <span kind="abugida">ɂ́ɟɀʇɽi</span>  |
-| :--------- | :----------------------------------------------- | ----------------------------------------------- |
-| Zeroth     | <HisyeoText kind='latin'>xûnyu</HisyeoText>      | <HisyeoText kind='abugida'>xûnyu</HisyeoText>    |
-| First      | <HisyeoText kind='latin'>kut</HisyeoText>        | <HisyeoText kind='abugida'>kut</HisyeoText>      |
-| Second     | <HisyeoText kind='latin'>dûî</HisyeoText>        | <HisyeoText kind='abugida'>dûî</HisyeoText>    |
-| Twelfth    | <HisyeoText kind='latin'>bole</HisyeoText>       | <HisyeoText kind='abugida'>bole</HisyeoText>     |
-| Eighteenth | <HisyeoText kind='latin'>dus tukwos</HisyeoText> | <HisyeoText kind='abugida'>dus tukwos</HisyeoText>  |
-| Twentieth  | <HisyeoText kind='latin'>dûî dus</HisyeoText>    | <HisyeoText kind='abugida'>dûî dus</HisyeoText> |
+| English    | Latin                                            | Abugida                                            | Syllabary                                            | 
+| :--------- | :----------------------------------------------- | -------------------------------------------------- | ---------------------------------------------------- | 
+| Zeroth     | <HisyeoText kind='latin'>xûnyu</HisyeoText>      | <HisyeoText kind='abugida'>xûnyu</HisyeoText>      | <HisyeoText kind='syllabary'>xûnyu</HisyeoText>      | 
+| First      | <HisyeoText kind='latin'>kut</HisyeoText>        | <HisyeoText kind='abugida'>kut</HisyeoText>        | <HisyeoText kind='syllabary'>kut</HisyeoText>        | 
+| Second     | <HisyeoText kind='latin'>dûî</HisyeoText>        | <HisyeoText kind='abugida'>dûî</HisyeoText>        | <HisyeoText kind='syllabary'>dûî</HisyeoText>        | 
+| Twelfth    | <HisyeoText kind='latin'>bole</HisyeoText>       | <HisyeoText kind='abugida'>bole</HisyeoText>       | <HisyeoText kind='syllabary'>bole</HisyeoText>       | 
+| Eighteenth | <HisyeoText kind='latin'>dus tukwos</HisyeoText> | <HisyeoText kind='abugida'>dus tukwos</HisyeoText> | <HisyeoText kind='syllabary'>dus tukwos</HisyeoText> | 
+| Twentieth  | <HisyeoText kind='latin'>dûî dus</HisyeoText>    | <HisyeoText kind='abugida'>dûî dus</HisyeoText>    | <HisyeoText kind='syllabary'>dûî dus</HisyeoText>    | 
 
 Any series of numbers can be an ordinal as long as they appear on the right-hand
 side of a noun phrase.
 
 <HisyeoTabs>
-  <p>niwos niswî xe hoî xîmol "third house on the left"</p>
+  <p>niwos niswî xe hoî xîmol&emsp;<em>"third house on the left"</em></p>
 </HisyeoTabs>
 
 As you'll see in the next section, this ordinal-on-the-right usage how we
@@ -242,15 +308,15 @@ was chosen as Monday to coincide with the near majority of the world agreement
 on this and it allows Saturday and Sunday to be the "Weekend" (<HisyeoWord
 is='kônyêc'/> <HisyeoWord is='wêxôn'/>).
 
-| Planet  | True Color Photo                                                                                                                                                                                                                                                                                                                                                                         | English   | Hîsyêô                                             | Abugida                                              |
-| ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------- | :------------------------------------------------- | :--------------------------------------------------- |
-| Mercury | ![Mercury in true color (by MESSENGER in 2008) - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Mercury_in_true_color.jpg/240px-Mercury_in_true_color.jpg)                                                                                                                                                                                                         | Monday    | <HisyeoText kind='latin'>lono dûsul</HisyeoText>   | <HisyeoText kind='abugida'>lono dûsul</HisyeoText>   |
-| Venus   | ![True colour image of Venus, as captured by MESSENGER - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Venus_2_Approach_Image.jpg/234px-Venus_2_Approach_Image.jpg)                                                                                                                                                                                               | Tuesday   | <HisyeoText kind='latin'>lono mîhûon</HisyeoText>  | <HisyeoText kind='abugida'>lono mîhûon</HisyeoText>  |
-| Earth   | ![The Blue Marble, Apollo 17, December 1972](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/240px-The_Blue_Marble_%28remastered%29.jpg)                                                                                                                                                                                                  | Wednesday | <HisyeoText kind='latin'>lono zôî</HisyeoText>     | <HisyeoText kind='abugida'>lono zôî</HisyeoText>     |
-| Mars    | ![Mars, as captured by the Hope orbiter](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png/240px-Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png)                                                                                                                                                                          | Thursday  | <HisyeoText kind='latin'>lono cinôbu</HisyeoText>  | <HisyeoText kind='abugida'>lono cinôbu</HisyeoText>  |
-| Jupiter | ![This true-color simulated view of Jupiter is composed of 4 images taken by NASA's Cassini spacecraft on December 7, 2000 - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Jupiter_in_true_color.jpg/248px-Jupiter_in_true_color.jpg)                                                                                                                             | Friday    | <HisyeoText kind='latin'>lono zîngu</HisyeoText>   | <HisyeoText kind='abugida'>lono zîngu</HisyeoText>   |
-| Saturn  | ![Original Caption Released with Image: NASA's Voyager 2 took this 'true color' photograph of Saturn on July 21, 1981, when the spacecraft was 33.9 million kilometers (21 million miles) from the planet. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Saturn_With_Rhea_and_Dione_%28true_color%29.jpg/179px-Saturn_With_Rhea_and_Dione_%28true_color%29.jpg) | Saturday  | <HisyeoText kind='latin'>lono unbol</HisyeoText>  | <HisyeoText kind='abugida'>lono unbol</HisyeoText>  |
-| Uranus  | ![This picture of Uranus in true color was compiled from images returned Jan. 17, 1986, by the narrow-angle camera of Voyager 2. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Uranus_true_colour.jpg/240px-Uranus_true_colour.jpg)                                                                                                                             | Sunday    | <HisyeoText kind='latin'>lono xolxîlî</HisyeoText> | <HisyeoText kind='abugida'>lono xolxîlî</HisyeoText> |
+| Planet  | True Color Photo                                                                                                                                                                                                                                                                                                                                                                         | English   | Hîsyêô                                             | Abugida                                              | Syllabary                                              |
+| ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------- | :------------------------------------------------- | :--------------------------------------------------- | :----------------------------------------------------- |
+| Mercury | ![Mercury in true color (by MESSENGER in 2008) - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Mercury_in_true_color.jpg/240px-Mercury_in_true_color.jpg)                                                                                                                                                                                                         | Monday    | <HisyeoText kind='latin'>lono dûsul</HisyeoText>   | <HisyeoText kind='abugida'>lono dûsul</HisyeoText>   | <HisyeoText kind='syllabary'>lono dûsul</HisyeoText>   |
+| Venus   | ![True colour image of Venus, as captured by MESSENGER - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Venus_2_Approach_Image.jpg/234px-Venus_2_Approach_Image.jpg)                                                                                                                                                                                               | Tuesday   | <HisyeoText kind='latin'>lono mîhûon</HisyeoText>  | <HisyeoText kind='abugida'>lono mîhûon</HisyeoText>  | <HisyeoText kind='syllabary'>lono mîhûon</HisyeoText>  |
+| Earth   | ![The Blue Marble, Apollo 17, December 1972](https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/The_Blue_Marble_%28remastered%29.jpg/240px-The_Blue_Marble_%28remastered%29.jpg)                                                                                                                                                                                                  | Wednesday | <HisyeoText kind='latin'>lono zôî</HisyeoText>     | <HisyeoText kind='abugida'>lono zôî</HisyeoText>     | <HisyeoText kind='syllabary'>lono zôî</HisyeoText>     |
+| Mars    | ![Mars, as captured by the Hope orbiter](https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png/240px-Mars_-_August_30_2021_-_Flickr_-_Kevin_M._Gill.png)                                                                                                                                                                          | Thursday  | <HisyeoText kind='latin'>lono cinôbu</HisyeoText>  | <HisyeoText kind='abugida'>lono cinôbu</HisyeoText>  | <HisyeoText kind='syllabary'>lono cinôbu</HisyeoText>  |
+| Jupiter | ![This true-color simulated view of Jupiter is composed of 4 images taken by NASA's Cassini spacecraft on December 7, 2000 - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Jupiter_in_true_color.jpg/248px-Jupiter_in_true_color.jpg)                                                                                                                             | Friday    | <HisyeoText kind='latin'>lono zîngu</HisyeoText>   | <HisyeoText kind='abugida'>lono zîngu</HisyeoText>   | <HisyeoText kind='syllabary'>lono zîngu</HisyeoText>   |
+| Saturn  | ![Original Caption Released with Image: NASA's Voyager 2 took this 'true color' photograph of Saturn on July 21, 1981, when the spacecraft was 33.9 million kilometers (21 million miles) from the planet. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Saturn_With_Rhea_and_Dione_%28true_color%29.jpg/179px-Saturn_With_Rhea_and_Dione_%28true_color%29.jpg) | Saturday  | <HisyeoText kind='latin'>lono unbol</HisyeoText>   | <HisyeoText kind='abugida'>lono unbol</HisyeoText>   | <HisyeoText kind='syllabary'>lono unbol</HisyeoText>   |
+| Uranus  | ![This picture of Uranus in true color was compiled from images returned Jan. 17, 1986, by the narrow-angle camera of Voyager 2. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Uranus_true_colour.jpg/240px-Uranus_true_colour.jpg)                                                                                                                             | Sunday    | <HisyeoText kind='latin'>lono xolxîlî</HisyeoText> | <HisyeoText kind='abugida'>lono xolxîlî</HisyeoText> | <HisyeoText kind='syllabary'>lono xolxîlî</HisyeoText> |
 
 In order to indicate a specific day, use one of the demonstrative pronouns
 (<HisyeoWord is='ôfo'/>, <HisyeoWord is='ulyô'/>, <HisyeoWord is='onô'/>).
@@ -292,20 +358,20 @@ There's a few relative terms that are also highly utilized in everyday speech:
 The months of the year do not use such a system, instead they rely on the
 ordinal numbers that were shown above.
 
-| Month     | Hîsyêô                                            | Abugida                                             |
-| :-------- | :------------------------------------------------ | :-------------------------------------------------- |
-| January   | <HisyeoText kind='latin'>wuto kut</HisyeoText>    | <HisyeoText kind='abugida'>wuto kut</HisyeoText>    |
-| February  | <HisyeoText kind='latin'>wuto dûî</HisyeoText>    | <HisyeoText kind='abugida'>wuto dûî</HisyeoText>    |
-| March     | <HisyeoText kind='latin'>wuto niswî</HisyeoText>    | <HisyeoText kind='abugida'>wuto niswî</HisyeoText>    |
-| April     | <HisyeoText kind='latin'>wuto nonkû</HisyeoText>  | <HisyeoText kind='abugida'>wuto nonkû</HisyeoText>  |
-| May       | <HisyeoText kind='latin'>wuto tîû</HisyeoText>    | <HisyeoText kind='abugida'>wuto tîû</HisyeoText>    |
-| June      | <HisyeoText kind='latin'>wuto toû</HisyeoText>    | <HisyeoText kind='abugida'>wuto toû</HisyeoText>    |
-| July      | <HisyeoText kind='latin'>wuto xêtî</HisyeoText>   | <HisyeoText kind='abugida'>wuto xêtî</HisyeoText>   |
-| August    | <HisyeoText kind='latin'>wuto tukwos</HisyeoText> | <HisyeoText kind='abugida'>wuto tukwos</HisyeoText> |
-| September | <HisyeoText kind='latin'>wuto eson</HisyeoText>   | <HisyeoText kind='abugida'>wuto eson</HisyeoText>   |
-| October   | <HisyeoText kind='latin'>wuto dus</HisyeoText>    | <HisyeoText kind='abugida'>wuto dus</HisyeoText>    |
-| November  | <HisyeoText kind='latin'>wuto ônsu</HisyeoText>   | <HisyeoText kind='abugida'>wuto ônsu</HisyeoText>   |
-| December  | <HisyeoText kind='latin'>wuto bole</HisyeoText>   | <HisyeoText kind='abugida'>wuto bole</HisyeoText>   |
+| Month     | Hîsyêô                                            | Abugida                                             | Syllabary                                             |
+| :-------- | :------------------------------------------------ | :-------------------------------------------------- | :---------------------------------------------------- |
+| January   | <HisyeoText kind='latin'>wuto kut</HisyeoText>    | <HisyeoText kind='abugida'>wuto kut</HisyeoText>    | <HisyeoText kind='syllabary'>wuto kut</HisyeoText>    |
+| February  | <HisyeoText kind='latin'>wuto dûî</HisyeoText>    | <HisyeoText kind='abugida'>wuto dûî</HisyeoText>    | <HisyeoText kind='syllabary'>wuto dûî</HisyeoText>    |
+| March     | <HisyeoText kind='latin'>wuto niswî</HisyeoText>  | <HisyeoText kind='abugida'>wuto niswî</HisyeoText>  | <HisyeoText kind='syllabary'>wuto niswî</HisyeoText>  |
+| April     | <HisyeoText kind='latin'>wuto nonkû</HisyeoText>  | <HisyeoText kind='abugida'>wuto nonkû</HisyeoText>  | <HisyeoText kind='syllabary'>wuto nonkû</HisyeoText>  |
+| May       | <HisyeoText kind='latin'>wuto tîû</HisyeoText>    | <HisyeoText kind='abugida'>wuto tîû</HisyeoText>    | <HisyeoText kind='syllabary'>wuto tîû</HisyeoText>    |
+| June      | <HisyeoText kind='latin'>wuto toû</HisyeoText>    | <HisyeoText kind='abugida'>wuto toû</HisyeoText>    | <HisyeoText kind='syllabary'>wuto toû</HisyeoText>    |
+| July      | <HisyeoText kind='latin'>wuto xêtî</HisyeoText>   | <HisyeoText kind='abugida'>wuto xêtî</HisyeoText>   | <HisyeoText kind='syllabary'>wuto xêtî</HisyeoText>   |
+| August    | <HisyeoText kind='latin'>wuto tukwos</HisyeoText> | <HisyeoText kind='abugida'>wuto tukwos</HisyeoText> | <HisyeoText kind='syllabary'>wuto tukwos</HisyeoText> |
+| September | <HisyeoText kind='latin'>wuto eson</HisyeoText>   | <HisyeoText kind='abugida'>wuto eson</HisyeoText>   | <HisyeoText kind='syllabary'>wuto eson</HisyeoText>   |
+| October   | <HisyeoText kind='latin'>wuto dus</HisyeoText>    | <HisyeoText kind='abugida'>wuto dus</HisyeoText>    | <HisyeoText kind='syllabary'>wuto dus</HisyeoText>    |
+| November  | <HisyeoText kind='latin'>wuto ônsu</HisyeoText>   | <HisyeoText kind='abugida'>wuto ônsu</HisyeoText>   | <HisyeoText kind='syllabary'>wuto ônsu</HisyeoText>   |
+| December  | <HisyeoText kind='latin'>wuto bole</HisyeoText>   | <HisyeoText kind='abugida'>wuto bole</HisyeoText>   | <HisyeoText kind='syllabary'>wuto bole</HisyeoText>   |
 
 To remember which months have 31, 30, and 28 days, try using this children's
 rhyme:
@@ -332,14 +398,14 @@ WIP Translation
 The seasons were chosen to reflect what unique characteristic each season has. We've
 also got ways to describe the seasons in equatorial regions too.
 
-| Season      | Hîsyêô                                        | Abugida                                       |
-| :---------- | :---------------------------------------------| :---------------------------------------------|
-| Spring      | <HisyeoText kind='latin'>yogô ûsên nîôk</HisyeoText>       | <HisyeoText kind='abugida'>yogô ûsên nîôk</HisyeoText>       |
-| Summer      | <HisyeoText kind='latin'>yogô ûsên tût</HisyeoText>        | <HisyeoText kind='abugida'>yogô ûsên tût</HisyeoText>        |
-| Autumn/Fall | <HisyeoText kind='latin'>yogô ûsên kon kudûdo</HisyeoText> | <HisyeoText kind='abugida'>yogô ûsên kon kudûdo</HisyeoText> |
-| Winter      | <HisyeoText kind='latin'>yogô ûsên cunyû</HisyeoText>      | <HisyeoText kind='abugida'>yogô ûsên cunyû</HisyeoText>      |
-| Wet         | <HisyeoText kind='latin'>yogô ûsên nubuso</HisyeoText>     | <HisyeoText kind='abugida'>yogô ûsên nubuso</HisyeoText>     |
-| Dry         | <HisyeoText kind='latin'>yogô ûsên ûlgûkîn</HisyeoText>    | <HisyeoText kind='abugida'>yogô ûsên ûlgûkîn</HisyeoText>    |
+| Season      | Hîsyêô                                                     | Abugida                                                      | Syllabary                                                      |
+| :---------- | :--------------------------------------------------------  | :----------------------------------------------------------- | :------------------------------------------------------------- |
+| Spring      | <HisyeoText kind='latin'>yogô ûsên nîôk</HisyeoText>       | <HisyeoText kind='abugida'>yogô ûsên nîôk</HisyeoText>       | <HisyeoText kind='syllabary'>yogô ûsên nîôk</HisyeoText>       |
+| Summer      | <HisyeoText kind='latin'>yogô ûsên tût</HisyeoText>        | <HisyeoText kind='abugida'>yogô ûsên tût</HisyeoText>        | <HisyeoText kind='syllabary'>yogô ûsên tût</HisyeoText>        |
+| Autumn/Fall | <HisyeoText kind='latin'>yogô ûsên kon kudûdo</HisyeoText> | <HisyeoText kind='abugida'>yogô ûsên kon kudûdo</HisyeoText> | <HisyeoText kind='syllabary'>yogô ûsên kon kudûdo</HisyeoText> |
+| Winter      | <HisyeoText kind='latin'>yogô ûsên cunyû</HisyeoText>      | <HisyeoText kind='abugida'>yogô ûsên cunyû</HisyeoText>      | <HisyeoText kind='syllabary'>yogô ûsên cunyû</HisyeoText>      |
+| Wet         | <HisyeoText kind='latin'>yogô ûsên nubuso</HisyeoText>     | <HisyeoText kind='abugida'>yogô ûsên nubuso</HisyeoText>     | <HisyeoText kind='syllabary'>yogô ûsên nubuso</HisyeoText>     |
+| Dry         | <HisyeoText kind='latin'>yogô ûsên ûlgûkîn</HisyeoText>    | <HisyeoText kind='abugida'>yogô ûsên ûlgûkîn</HisyeoText>    | <HisyeoText kind='syllabary'>yogô ûsên ûlgûkîn</HisyeoText>    |
 
 To say something is "in the summer" or similar, supply one of these as the
 object of a hoî preposition.
@@ -440,6 +506,30 @@ to return to the main sentence clause for the remaining consituents.
         <dd><em>And when is your birthday?</em></dd>
         <dt>Lovoiyel</dt>
         <dd><HisyeoText kind='abugida'>lono dûî dus eson yê wuto toû.</HisyeoText></dd>
+        <dd><em>June 29th</em></dd>
+      </dl>
+    </TabItem>
+    <TabItem value="ostok-ûlonfû" label="aStK ulNfu" attributes={{className: 'hisyeo-tab-item-syllabary'}}>
+      <dl>
+        <dt>Malina</dt>
+        <dd><HisyeoText kind='syllabary'>noî Lovoiyel, nîmû fuî mîkdol zik yê siskin.</HisyeoText></dd>
+        <dd><em>Raphael, how many siblings do you have?</em></dd>
+        <dt>Lovoiyel</dt>
+        <dd><HisyeoText kind='syllabary'>noyo fuî dûî siskin moskûl ûn kut siskin wohî.</HisyeoText></dd>
+        <dd><em>I have two brothers and one sister.</em></dd>
+        <dt>Malina</dt>
+        <dd><HisyeoText kind='syllabary'>nîo li nokdo zik.</HisyeoText></dd>
+        <dd><em>How old are they?</em></dd>
+        <dt>Lovoiyel</dt>
+        <dd><HisyeoText kind='syllabary'>siskin wohî noyo Somonvo li ônsu ûsên .</HisyeoText></dd>
+        <dd><em>My sister Samantha is 11 years old.</em></dd>
+        <dd><HisyeoText kind='syllabary'>li ziyôn ûsên ûn dûî dus kut ûsên yê nokdo û siskin moskûl noyo.</HisyeoText></dd>
+        <dd><em>My brother's ages are 14 and 21.</em></dd>
+        <dt>Malina</dt>
+        <dd><HisyeoText kind='syllabary'>ûn lôzîc nîmû hoî lono zik?</HisyeoText></dd>
+        <dd><em>And when is your birthday?</em></dd>
+        <dt>Lovoiyel</dt>
+        <dd><HisyeoText kind='syllabary'>lono dûî dus eson yê wuto toû.</HisyeoText></dd>
         <dd><em>June 29th</em></dd>
       </dl>
     </TabItem>
