Fix side bar ordering & add phono page link to ortho page

--- a/docs/language/orthography.mdx
+++ b/docs/language/orthography.mdx
@@ -21,6 +21,9 @@ syllabic writing systems):
     <p>zowo hônyo cûtî bûlo fîkî ulyô socok xe kôs zoston mût boxô dîzel yê zowo legêfû onô.&emsp;<em>The quick brown fox starts to jump over the lazy dog</em></p>
 </HisyeoTabs>
 
+Check out the [phonology](../language/phonology) page for details about which
+phonemes are available.
+
 ## Letin
 
 Using most of the standard alphabetic characters that are employed by many
