Update font file, add syllabary to phonology doc and fix old blog posts

--- a/docs/language/phonology.mdx
+++ b/docs/language/phonology.mdx
@@ -21,25 +21,25 @@ Hîsyêô has 16 consonants and 1 null consonant which is necessary for the
 alphasyllabary but you can optionally include a ⟨ ꞌ ⟩ character in Latin
 representations too.
 
-| Hîsyêô |  Latin   |      IPA      | Transliteration Sources                                    |
-| :----: | :------: | :-----------: | ---------------------------------------------------------- |
-| ⟨ɽ⟩  | ⟨ ꞌ ⟩ |     / . /     | glottal stops & hiatus: ʔ .                                |
-| ⟨ɂ⟩  |  ⟨h⟩   |  /h/ ~ / x /  | back fricatives: x χ ʁ ʀ ħ ʕ h ɦ ʢ ʜ ɧ                     |
-| ⟨ɔ⟩  |  ⟨k⟩   |  / k / ~ /q/  | voiceless back plosives: k q c                             |
-| ⟨ꜿ⟩ |  ⟨g⟩   |  / ɡ͈ / ~ /ɢ/  | voiced back plosives: g ɢ ʡ ɣ                              |
-| ⟨c⟩  | ⟨ t ⟩  |     / t /     | voiceless front plosives: t ʈ                              |
-| ⟨ꞇ⟩ |  ⟨c⟩   | /t͡ʃ/ ~ / t͡ɕ / | voiceless affricates: t͡s  t͡ʃ  t͡ɕ  ʈ͡ʂ                       |
-| ⟨ɐ⟩  |  ⟨s⟩   |     / s̟ /     | alveolar sibilants: s z                                    |
-| ⟨ɋ⟩  |  ⟨x⟩   |  / ʃ / ~ /ʂ/  | palatal fricatives: ʃ ʒ ʂ ʐ ç ɕ ʑ                          |
-| ⟨ʌ⟩  |  ⟨d⟩   |     / d /     | voiced alveolar plosives: d ɖ                              |
-| ⟨ⱴ⟩ | ⟨ z ⟩  | /d͡ʒ/ ~ / d͡ʑ / | voiced affricates: d͡z d͡ʒ d͡ʑ ɖ͡ʐ ɟ                           |
-| ⟨ʋ⟩  |  ⟨b⟩   |  / b / ~ /p/  | labial plosives:  b p                                      |
-| ⟨ɤ⟩  |  ⟨f⟩   |  /ɸ/ ~ / f/  | labio-dental fricatives: ɸ β f v θ ð                       |
-| ⟨ƶ⟩  |  ⟨m⟩   |     / m /     | labial nasals: m ɱ                                         |
-| ⟨ƨ⟩  |  ⟨n⟩   |     / n /     | other nasals:  n ɳ ɲ ŋ ɴ                                   |
-| ⟨ʒ⟩  |  ⟨w⟩   |     / w /     | labial approximants: w ɥ ʋ                                 |
-| ⟨ʓ⟩  | ⟨ l ⟩  |  / l / ~ /ɫ/  | alve./retro approx./taps/trills: ɹ  ɻ  l  ɭ  ɺ ɬ ɮ  r  ɾ ɽ |
-| ⟨ɀ⟩  |  ⟨y⟩   |     / j /     | patalal/velar approximants: j ʝ ʎ ɰ ʟ                      |
+| Syllabary                         | Abugida                       |  Latin                      | IPA         | Transliteration Sources                                    |
+| :---------------------------------------------------------------: | :-------------------------: | :---------: | :-----------: | ---------------------------------------------------------- |
+| <span kind='syllabary'>a</span>   | <span kind='abugida'>ɽ</span> | <span kind='latin'>ꞌ</span> |     / . /     | glottal stops & hiatus: ʔ .                                |
+| <span kind='syllabary'>h</span>   | <span kind='abugida'>ɂ</span> | <span kind='latin'>h</span> |  /h/ ~ / x /  | back fricatives: x χ ʁ ʀ ħ ʕ h ɦ ʢ ʜ ɧ                     |
+| <span kind='syllabary'>k</span>   | <span kind='abugida'>ɔ</span> | <span kind='latin'>k</span> |  / k / ~ /q/  | voiceless back plosives: k q c                             |
+| <span kind='syllabary'>g</span>   | <span kind='abugida'>ꜿ</span> | <span kind='latin'>g</span> |  / ɡ͈ / ~ /ɢ/  | voiced back plosives: g ɢ ʡ ɣ                              |
+| <span kind='syllabary'>t</span>   | <span kind='abugida'>c</span> | <span kind='latin'>t</span> |     / t /     | voiceless front plosives: t ʈ                              |
+| <span kind='syllabary'>c</span>   | <span kind='abugida'>ꞇ</span> | <span kind='latin'>c</span> | /t͡ʃ/ ~ / t͡ɕ / | voiceless affricates: t͡s  t͡ʃ  t͡ɕ  ʈ͡ʂ                       |
+| <span kind='syllabary'>s</span>   | <span kind='abugida'>ɐ</span> | <span kind='latin'>s</span> |     / s̟ /     | alveolar sibilants: s z                                    |
+| <span kind='syllabary'>x</span>   | <span kind='abugida'>ɋ</span> | <span kind='latin'>x</span> |  / ʃ / ~ /ʂ/  | palatal fricatives: ʃ ʒ ʂ ʐ ç ɕ ʑ                          |
+| <span kind='syllabary'>d</span>   | <span kind='abugida'>ʌ</span> | <span kind='latin'>d</span> |     / d /     | voiced alveolar plosives: d ɖ                              |
+| <span kind='syllabary'>z</span>   | <span kind='abugida'>ⱴ</span> | <span kind='latin'>z</span> | /d͡ʒ/ ~ / d͡ʑ / | voiced affricates: d͡z d͡ʒ d͡ʑ ɖ͡ʐ ɟ                           |
+| <span kind='syllabary'>b</span>   | <span kind='abugida'>ʋ</span> | <span kind='latin'>b</span> |  / b / ~ /p/  | labial plosives:  b p                                      |
+| <span kind='syllabary'>f</span>   | <span kind='abugida'>ɤ</span> | <span kind='latin'>f</span> |  /ɸ/ ~ / f/  | labio-dental fricatives: ɸ β f v θ ð                       |
+| <span kind='syllabary'>m</span>   | <span kind='abugida'>ƶ</span> | <span kind='latin'>m</span> |     / m /     | labial nasals: m ɱ                                         |
+| <span kind='syllabary'>n</span>   | <span kind='abugida'>ƨ</span> | <span kind='latin'>n</span> |     / n /     | other nasals:  n ɳ ɲ ŋ ɴ                                   |
+| <span kind='syllabary'>w</span>   | <span kind='abugida'>ʒ</span> | <span kind='latin'>w</span> |     / w /     | labial approximants: w ɥ ʋ                                 |
+| <span kind='syllabary'>l</span>   | <span kind='abugida'>ʓ</span> | <span kind='latin'>l</span> |  / l / ~ /ɫ/  | alve./retro approx./taps/trills: ɹ  ɻ  l  ɭ  ɺ ɬ ɮ  r  ɾ ɽ |
+| <span kind='syllabary'>y</span>   | <span kind='abugida'>ɀ</span> | <span kind='latin'>y</span> |     / j /     | patalal/velar approximants: j ʝ ʎ ɰ ʟ                      |
 
 - For all phonemes, there is some flexibility in the position, voicing,
   aspiration, etc. to accommodate learners who speak languages that may
@@ -63,15 +63,19 @@ representations too.
 
 ### Vowels
 
-| Hîsyêô  | Latin | IPA | Transliteration Sources                             |
-| :-----: | :---: | --- | --------------------------------------------------- |
-|         | ⟨o⟩ | /ɑ/ | open-back unrounded vowels: a ɑ ɐ                        |
-| ⟨ ı ⟩ | ⟨ô⟩ | /ɔ/ | open-back-close-back rounded vowels: ɶ ɒ ɞ ɔ o ɵ               |
-| ⟨ ʄ ⟩ | ⟨û⟩ | /u/ | back close vowels: u ʉ ʊ ɯ                          |
-| ⟨ ȷ ⟩ | ⟨i⟩ | /ɪ/ | central near-close-mid vowels: ɪ ʏ ɨ ɘ       |
-| ⟨ ɟ ⟩ | ⟨î⟩ | /i/ | front close vowels: i y                     |
-| ⟨ ɿ ⟩ | ⟨e⟩ | /ɛ/ | front/central unrounded near-open-mid vowels: ɛ ɜ æ |
-| ⟨ ʇ ⟩ | ⟨ê⟩ | /e/ | front close-mid vowels: e ø                         |
+The [syllabary](./orthography.mdx#hîsyokûî) has unique versions for each
+syllable (onset, nucleus, coda). The null onset glyphs are shown below.
+
+| Syllabary                       | Abugida                       | Latin                       | IPA | Transliteration Sources                             |
+| :-----------------------------: | :---------------------------: | :-------------------------: | --- | --------------------------------------------------- |
+| <span kind="syllabary">a</span> | <span kind="abugida"> </span> | <span kind="latin">o</span> | /ɑ/ | open-back unrounded vowels: a ɑ ɐ                   |
+| <span kind="syllabary">o</span> | <span kind="abugida">ı</span> | <span kind="latin">ô</span> | /o/ | open-back-close-back rounded vowels: ɶ ɒ ɞ ɔ o ɵ    |
+| <span kind="syllabary">j</span> | <span kind="abugida">ȷ</span> | <span kind="latin">i</span> | /ɪ/ | central near-close-mid vowels: ɪ ʏ ɨ ɘ              |
+| <span kind="syllabary">i</span> | <span kind="abugida">ɟ</span> | <span kind="latin">î</span> | /i/ | front close vowels: i y                             |
+| <span kind="syllabary">q</span> | <span kind="abugida">ɿ</span> | <span kind="latin">e</span> | /ɛ/ | front/central unrounded near-open-mid vowels: ɛ ɜ æ |
+| <span kind="syllabary">e</span> | <span kind="abugida">ʇ</span> | <span kind="latin">ê</span> | /e/ | front close-mid vowels: e ø                         |
+| <span kind="syllabary">r</span> | <span kind="abugida">ʃ</span> | <span kind="latin">u</span> | /ʌ/ | open-mid back unrounded vowels: ʌ ə ɜ ɐ ɤ           |
+| <span kind="syllabary">u</span> | <span kind="abugida">ʄ</span> | <span kind="latin">û</span> | /u/ | back close rounded vowels: u ʉ ʊ ɯ                  |
 
 ## Phonotactics
 
